--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
-title: Geet's homepage # name of the site
+title: Geet Rakala's homepage # name of the site
 author: Geet Rakala # name of site's author
 email: geet.rakala@oist.jp # email of site's author
 url: https://geetrakala.github.io # root address of the site
 baseurl: # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
+Academic researcher in the field of Statistical Physics/ Condensed Matter Physics
+
 
 permalink: /:slug.html
 
