--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Geet Rakala ( GR ) # name of the site
+title: Geet Rakala # name of the site
 author: Geet Rakala # name of site's author
 email: geet.rakala@oist.jp # email of site's author
 url: https://geetrakala.github.io # root address of the site
