--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,7 +2,11 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-    - title: github repo
-      url: https://github.com/geetrakala
     - title: CV
       url: cv
+    - title: Projects
+      url: projects
+    - title: arXix
+      url: arxiv
+    - title: github repo
+      url: https://github.com/geetrakala
