--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -6,7 +6,7 @@ entries:
       url: cv
     - title: Projects
       url: projects
-    - title: arXix
+    - title: arXiv
       url: arxiv
     - title: github repo
       url: https://github.com/geetrakala
