--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,7 +1,5 @@
 entries:
-    - title: CV
-      url: cv
-    - title: arXiv
-      url: arxiv
-    - title: github
+    - title: Google Scholar
+      url: https://scholar.google.co.in/citations?user=xbZKBvcAAAAJ&hl=en
+    - title: GitHub
       url: https://github.com/geetrakala
