--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Geet Rakala # name of the site
 author: Geet Rakala # name of site's author
-email: geet.rakala@oist.jp # email of site's author
+email:  # email of site's author
 url: https://geetrakala.github.io # root address of the site
 baseurl: # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
-  Academic researcher in the field of Statistical Physics/ Condensed Matter Physics.
+  Quanitative Researcher. Currently working on systematic options trading strategies on crypto exchanges.
 
 
 permalink: /:slug.html
